src/objects/Page_Snippet__c.object
<CustomObject>
    <fields>
        <fullName>Body_Text__c</fullName>
        <label>Body Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CSS_Class__c</fullName>
        <inlineHelpText>CSS class to use when rendering this snippet</inlineHelpText>
        <label>CSS Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_Title__c</fullName>
        <inlineHelpText>The URL of the blue link at the bottom of the snippet</inlineHelpText>
        <label>Link Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_URL__c</fullName>
        <inlineHelpText>The URL of the blue link at the bottom of the snippet</inlineHelpText>
        <label>Link URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Slide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Name__c</fullName>
        <label>Unique Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Page Snippet</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Link_Title__c</columns>
        <columns>Unique_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Snipetts</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Unique_Name__c</columns>
        <columns>Link_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Snipetts</label>
    </listViews>
    <listViews>
        <fullName>DF_Community_Page_Snippets</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Unique_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Unique_Name__c</field>
            <operation>startsWith</operation>
            <value>dfc</value>
        </filters>
        <label>DF Community Page Snippets</label>
    </listViews>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Page Snippet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Page Snippets</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>